HtmlUI: fixed radio button overflow

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/form/fields/radiobutton/RadioButton.css
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/form/fields/radiobutton/RadioButton.css
@@ -6,6 +6,8 @@
   margin-left: @mandatory-indicator-width;
   margin-right: 15px;
   outline: none;
+  overflow: hidden;
+  text-overflow: ellipsis;
   white-space: nowrap;
 
   &::before {
